tests/valid/definite/SetUnion_Valid_1.whiley
void System::main([string] args):
     {int} xs
     xs = {1,2,3,4}
     xs = xs ∪ {5,1}
     print str(xs)
