tests/invalid/simple/SetUnion_CompileFail_2.whiley
void System::main([string] args):
    {int} xs
    {real} ys
    ys = {1.0234234,1.12}
    xs = {1,2,3,4}
    xs = xs ∪ ys
    print str(xs)
